--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <h1>Deep Dish Brownies</h1>
-<img brownies.jpg>
+
+<img src="brownies.jpeg" alt="Brownies"> <!-- hint: <img> tag -->
+
+
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
- Hello my name is Marcello  
+    Marcello
+    
 </body>
 </html>
+<h4>Recipe by: Biz McMahon</h4>
+<h2>Related Recipes</h2>
+<ul>
+   <li><a href="#">Chewiest Brownies</a></li>
 
+   <li><a href="#">Can't Tell They're low-fat Brownies</a></li>
 
+    <li><a href="#">Brownies</a></li>
 
+    <li><a href="#">Best-Ever Chocolate Brownies</a></li>
+
+    <li><a href="#">Fudge Brownies</a></li>
+</ul>
+
+Prep Time
+60 mins
