--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <!DOCTYPE html>
-<h1>Deep Dish Brownies</h1>
-
-<img src="brownies.jpeg" alt="Brownies"> <!-- hint: <img> tag -->
 
 
 <html lang="en">
@@ -11,15 +8,28 @@
     <title>Document</title>
 </head>
 <body>
-    Marcello
+
+
+    <form>
+        <label for="zebra">First Name:</label> 
+        <input id="zebra" type="text">
+        <input type="tel">
+        <input type="email">
+    </form>
+    <h1>Deep Dish Brownies</h1>
+    
+
+    <img src="brownie.png" alt="Brownies"> <!-- hint: <img> tag-->
+
     
 </body>
 </html>
+<h5>Marcello</h5>
 <h4>Recipe by: Biz McMahon</h4>
 <h2>Related Recipes</h2>
 <ul>
    <li><a href="#">Chewiest Brownies</a></li>
-
+   
    <li><a href="#">Can't Tell They're low-fat Brownies</a></li>
 
     <li><a href="#">Brownies</a></li>
@@ -27,7 +37,54 @@
     <li><a href="#">Best-Ever Chocolate Brownies</a></li>
 
     <li><a href="#">Fudge Brownies</a></li>
+
 </ul>
 
-Prep Time
-60 mins
+<h2>Prep Time</h2>
+<span>60 minutes</span>
+
+<h3> Servings</h3>
+<span>9</span>
+
+<h2>Ingredients</h2>
+<ul>
+    <li>3/4 cup of butter, melted</li>
+    <li>1 1/2 cups white sugar</li>
+    <li>1 1/2 teaspoons vanilla extract</li>
+    <li>3 eggs</li>
+    <li>3/4 cup all-purpose flour</li>
+    <li>1/2 cup unsweetened cocoa powder</li>
+    <li>1/2 teaspoon baking powder</li>
+    <li>1/2 teaspoon salt</li>
+</ul>
+
+
+<h2>Directions</h2>
+<ol>
+    <li>Preheat oven to 350 degrees F (175 degrees C) and grease an 8 inch square pan.</li>
+
+    <li>In a large bowl, blend melted butter, sugar and vanilla.</li>
+
+    <li>Beat in eggs one at a time.</li>
+
+    <li>Combine the flour, cocoa, baking powder and salt. Gradually blend into the egg mixture.</li>
+
+    <li>Spread the batter into the prepared pan.</li>
+
+    <li>Bake in preheated oven for 40 to 45 minutes, or until brownies begin to pull away from the sides of the pan.</li>
+
+    <li>Let brownies cool, then cut into squares, Enjoy!</li>
+    </ol>
+
+
+    <h3>Tip</h3>
+
+    <p>Aluminum foil can be used to keep food moist, cook it evenly, and make clean-up faster.</p>
+
+
+    <h6>Nutritional Info</h6>
+
+    <span>340 cals</span>
+
+
+    <p>Find this recipe <a href="http://allrecipes.com/recipe//11063/deep-dish-brownies">here</a></p>
